kubernetes/apps/downloads/prowlarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: downloads
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: http
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "prowlarr.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr
          port: 9696
